--- a/app.json
+++ b/app.json
@@ -17,6 +17,8 @@
       }
     },
     "android": {
+      "package": "com.guardvault.app",
+      "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/icon.png",
         "backgroundColor": "#1f2937"
@@ -32,9 +34,19 @@
       "output": "single",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router", "expo-font", "expo-web-browser"],
+    "plugins": [
+      "expo-router",
+      "expo-font",
+      "expo-web-browser"
+    ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "EXPO_ROUTER_APP_ROOT": "./app",
+      "eas": {
+        "projectId": "f3cca095-50b2-43d0-8486-85e4a73eb3dd"
+      }
     }
   }
 }
