--- a/package.json
+++ b/package.json
@@ -17,19 +17,23 @@
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@reduxjs/toolkit": "^2.9.0",
     "expo": "53.0.20",
     "expo-blur": "~14.1.5",
     "expo-camera": "~16.1.11",
     "expo-clipboard": "^7.1.5",
     "expo-constants": "~17.1.7",
     "expo-crypto": "^14.1.5",
+    "expo-file-system": "~18.1.11",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.7",
-    "expo-local-authentication": "^16.0.5",
+    "expo-local-authentication": "~16.0.5",
     "expo-router": "~5.1.4",
+    "expo-sharing": "~13.1.5",
     "expo-splash-screen": "~0.30.10",
+    "expo-sqlite": "~15.2.14",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.10",
@@ -47,13 +51,12 @@
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
-    "expo-sqlite": "~15.2.14",
-    "expo-file-system": "~18.1.11",
-    "expo-sharing": "~13.1.5"
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "@types/react-redux": "^7.1.34",
     "gh-pages": "^6.1.1",
     "typescript": "~5.8.3"
   }
